Fixed spacing under toggle and made the board centered.

--- a/apps/tic-tac-toe/style.css
+++ b/apps/tic-tac-toe/style.css
@@ -6,8 +6,7 @@ justify-items: center;
 
 .toggle {
 	width: 300px;
-	margin-left: auto;
-	margin-right: auto;
+	margin: 0 auto 5%;
 }
 
 .toggle p {
@@ -92,10 +91,8 @@ td {
 
 table {
 	border-collapse: collapse;
-	position: absolute;
-	left: 50%;
-	margin-left: -155px;
-	top: 50px;
+	margin-left: auto;
+	margin-right: auto;
 }
 
 table tr:first-child td {
